--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 应用端口
 VITE_APP_PORT=3000
 # 项目名称
-VITE_APP_TITLE=vue3-element-admin
+VITE_APP_TITLE=light-admin-ui
 # 代理前缀
 VITE_APP_BASE_API=/dev-api
 
@@ -12,7 +12,7 @@ VITE_APP_API_URL=http://localhost:2222    # 本地
 # WebSocket 端点（不配置则关闭）
 # 线上: ws://api.youlai.tech/ws
 # 本地: ws://localhost:8000/ws
-VITE_APP_WS_ENDPOINT=
+VITE_APP_WS_ENDPOINT=ws://localhost:2222/ws
 
 
 # 启用 Mock 服务
