--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-element-admin",
+  "name": "light-admin-ui",
   "description": "Vue3 + Vite + TypeScript + Element-Plus 的后台管理模板，vue-element-admin 的 Vue3 版本",
   "version": "4.0.0",
   "private": true,
@@ -132,7 +132,7 @@
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   },
-  "repository": "https://gitee.com/youlaiorg/vue3-element-admin.git",
+  "repository": "https://github.com/top-system/light-admin-ui.git",
   "author": "有来开源组织",
   "license": "MIT"
 }
